bump for Centos 10 Stream, Java 21, and Tomcat 9